--- a/pages/index.css
+++ b/pages/index.css
@@ -43,7 +43,7 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -53,7 +53,7 @@
 .header__title {
   margin: 183px 0 0;
   max-width: 729px;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
@@ -62,7 +62,7 @@
 
 .header__span-accent {
   display: block;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-weight: 400;
   font-style: italic;
   font-weight: normal;
@@ -77,7 +77,7 @@
   color: #000;
   margin: 28px 0 0;
   max-width: 683px;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -98,7 +98,7 @@
   display: flex;
   justify-content: space-between;
   z-index: 2;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -128,7 +128,7 @@
 .recipes__title {
   margin: 0 0 24px;
   max-width: 580px;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -139,7 +139,7 @@
 .recipes__subtitle {
   margin: 0 0 80px;
   max-width: 438px;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-weight: 400;
   font-style: normal;
   font-size: 20px;
@@ -162,7 +162,7 @@
 .recipes__video-caption {
   display: flex;
   justify-content: space-between;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
