--- a/pages/index.css
+++ b/pages/index.css
@@ -161,7 +161,7 @@
   color: #fff;
 }
 
-.reservations {
+.reservation {
   background-color: #d9e7ff;
   background-image: url(../images/background_reservation.svg);
   background-repeat: no-repeat;
@@ -180,8 +180,11 @@
 }
 
 .reservation__form {
-  max-width: 385px;
   margin: 0 auto;
+}
+
+.form {
+  max-width: 385px;
 }
 
 .form__fieldset {
