--- a/pages/index.css
+++ b/pages/index.css
@@ -1,478 +1,11 @@
-.page {
-  max-width: 1600px;
-  min-width: 1100px;
-  margin: 0 auto;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  font-family: "Inter", "Arial", sans-serif;
-}
-
-.header {
-  padding: 30px 80px 40px;
-  background-color: #fff;
-  background-image: url(../images/background_header.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 800px;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  height: 39px;
-  width: 105px;
-  position: relative;
-  right: 30px;
-}
-
-.nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: 500;
-}
-
-.nav__links {
-  display: flex;
-  column-gap: 20px;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__link:hover  {
-  opacity: 50%
-}
-
-.header__title {
-  margin: 183px 0 0;
-  max-width: 729px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-}
-
-.header__span-accent {
-  display: block;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  font-size: 60px;
-  line-height: 72px;
-  color: #3f96f3;
-}
-
-.header__description {
-  font-size: 20px;
-  line-height: 30px;
-  color: #000;
-  margin: 28px 0 0;
-  max-width: 683px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  position: absolute;
-  height: 568px;
-  width: 646px;
-  top: 124px;
-  right: 5px;
-  z-index: 1;
-}
-
-.header__footer {
-  margin-top: auto;
-  display: flex;
-  justify-content: space-between;
-  z-index: 2;
-}
-
-.header__paragraph {
-  display: flex;
-  margin: 0;
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-}
-
-.header__paragraph:last-of-type {
-  align-items: self-end;
-}
-
-.recipes {
-  padding: 100px 80px 215px;
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 800px;
-  color: #fff;
-}
-
-.recipes__title {
-  margin: 0 0 24px;
-  max-width: 580px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  color: #fff;
-}
-
-.recipes__subtitle {
-  margin: 0 0 80px;
-  max-width: 438px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-  color: #fff;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-  column-gap: 40px;
-}
-
-.recipes__iframe {
-  height: 273px;
-  width: 480px;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  color: #fff;
-}
-
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 800px;
-  padding: 100px 0 120px;
-}
-
-.reservation__title {
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  text-align: center;
-  margin: 0 0 80px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__fieldset {
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-.form__label {
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  display: flex;
-}
-
-.form__input {
-  font-family: "Inter", "Arial", sans-serif;
-  font-size: 20px;
-  line-height: 30px;
-  border: 1px solid #838383;
-  color: #838383;
-  display: block;
-  width: 100%;
-  padding: 15px 20px;
-  box-sizing: border-box;
-  margin: 8px 0 32px;
-  border-radius: 4px;
-}
-
-.form__input::placeholder {
-  padding: 15px 20px;
-}
-
-.form__button {
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  border-radius: 4px;
-  background-color: #1878dc;
-  padding: 20px 0;
-  width: 100%;
-  color: #fff;
-  border: none;
-  margin: 0 0 32px;
-}
-
-.form__button:hover {
-  background-color: #3f96f3;
-  transition: background-color 0.3s ease;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  margin: 0;
-  width: 20px;
-  height: 20px;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  justify-content: center;
-  column-gap: 12px;
-}
-
-.menu {
-  background-color: #fff;
-  background-image: url(../images/background_menu.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 800px;
-  padding: 100px 0 100px;
-  margin: 0;
-}
-
-.menu__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  text-align: center;
-  margin: 0 0 24px;
-}
-
-.menu__subtitle {
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  padding: 0 0 100px;
-  max-width: 780px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.menu__cards {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 100px;
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-
-.card {
-  width: 540px;
-}
-
-.card__list {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-
-.card__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 30px;
-  margin: 0 0 32px;
-}
-
-.card__list-item {
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-  margin-top: 16px;
-  display: flex;
-}
-
-.card__list-divider {
-  border-bottom: 1px solid black;
-  flex-grow: 1;
-}
-
-.about {
-  background-color: #0a2850;
-  padding: 100px 80px 0px;
-  position: relative;
-  display: flex;
-  height: 400px;
-  overflow: hidden;
-}
-
-.about__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  color: #fff;
-  max-width: 251px;
-  margin: 0;
-  padding: 0;
-  z-index: 1;
-}
-
-.about__content {
-  max-width: 660px;
-  top: 119px;
-  position: absolute;
-  right: 80px;
-  bottom: 173px;
-}
-
-.about__paragraph {
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #fff;
-  margin: 20px 0 0;
-}
-
-.about__circle {
-  height: 426px;
-  width: 426px;
-  border-radius: 50%;
-  opacity: 100;
-  background-color: #1878dc;
-  position: absolute;
-  top: -152px;
-  left: -129px;
-  z-index: 0;
-}
-
-@keyframes pulsate {
-  0% {
-    opacity: 0;
-    transform: scale(1);
-  }
-  50% {
-    opacity: 0.6;
-    transform: scale(1.2);
-  }
-  100% {
-    opacity: 0;
-    transform: scale(1.5);
-  }
-}
-
-.about__circle_animation_blurred {
-  z-index: 8;
-  animation: pulsate 1.3s ease-in-out infinite;
-}
-
-.footer {
-  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-  padding: 60px 80px;
-  margin: 0;
-}
-
-.footer__content {
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer__logo {
-  height: 39px;
-  width: 105px;
-}
-
-.footer__column {
-  color: #fff;
-  margin: 80px;
-}
-
-.footer__social-heading {
-  color: #fff;
-  margin: 0 0 20px;
-  font-family: "Inter";
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.footer__list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  font-family: "Inter";
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.footer__list-item {
-  color: #fff;
-  margin: 0 0 16px;
-}
-
-.footer__list-item:last-child {
-  margin: 0;
-}
-
-.footer__social-icon {
-  height: 16px;
-  width: 16px;
-}
-
-.footer__social-link {
-  color: white;
-  font-size: 16px;
-  line-height: 20px;
-  text-decoration: none;
-  display: flex;
-  gap: 10px;
-}
-
-.footer__social-link:hover {
-  opacity: 70%;
-}
-
-.footer__copyright {
-  color: #fff;
-  margin: 108px 0 0;
-  font-family: "Inter";
-  font-size: 16px;
-  line-height: 20px;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/header.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/card.css);
+@import url(../blocks/about.css);
+@import url(../blocks/footer.css);
