--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,9 +1,9 @@
 .about {
     background-color: #0a2850;
-    padding: 100px 80px 0px;
+    padding: 100px 80px 173px;
     position: relative;
     display: flex;
-    height: 400px;
+    justify-content: space-between;
     overflow: hidden;
   }
   
@@ -21,10 +21,6 @@
   
   .about__content {
     max-width: 660px;
-    top: 119px;
-    position: absolute;
-    right: 80px;
-    bottom: 173px;
   }
   
   .about__paragraph {
@@ -54,7 +50,6 @@
     }
     50% {
       opacity: 0.6;
-      transform: scale(1.2);
     }
     100% {
       opacity: 0;
