--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -3,7 +3,7 @@
     background-image: url(../images/background_menu.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 800px;
+    background-position: center;
     padding: 100px 0 100px;
     margin: 0;
   }
