--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -7,11 +7,11 @@
     height: 39px;
     width: 105px;
     position: relative;
-    right: 30px;
+    left: -50px;
   }
   
   .nav__link {
-    color: #000000;
+    color: #000;
     text-decoration: none;
     font-weight: 500;
   }
