--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -3,7 +3,7 @@
     background-image: url(../images/background_reservation.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 800px;
+    background-position: center;
     padding: 100px 0 120px;
   }
   
